[project]
name = "chekml"
version = "0.1.0"
description = "A versatile library for data manipulation"
readme = "README.md"
authors = [
    { name="Chek Chee Him", email="cchgolden050@gmail.com" }
]
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["testing", "documentation"]
