[project]
name = "chekml"
version = "0.1.4"
description = "A versatile library for data manipulation"
readme = "README.md"
authors = [
    { name="Chek Chee Him", email="cchgolden050@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.7"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# -----------------------------
# Control which packages are found
# -----------------------------
[tool.setuptools.packages.find]
where = ["."]
include = ["chekml*"]          # only your package
exclude = ["testing*", "documentation*", "dist*", "build*"]

# -----------------------------
# Control what non-Python files are shipped
# -----------------------------
[tool.setuptools]
include-package-data = false   # disable auto-include junk

[tool.setuptools.package-data]
chekml = ["**/*.so"]           # only keep final .so files you need

